--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,7 +5,9 @@
     <tr>
       <th>Title</th>
       <th>Body</th>
-      <th>Author</th>
+      <% if user_signed_in? %>
+        <th>Author</th>
+      <% end %>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,10 +17,14 @@
       <tr>
         <td><%= post.title %></td>
         <td><%= post.body %></td>
-        <td><%= post.author_id %></td>
+        <% if user_signed_in? %>
+          <td><%= post.author.username %></td>
+        <% end %>
         <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% if current_user.try(:id) == post.author_id %>
+          <td><%= link_to 'Edit', edit_post_path(post) %></td>
+          <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
