--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,12 @@
  *= require_tree .
  *= require_self
  */
+
+ html, body {
+  margin:0;
+  padding:0;
+  height:100%;
+  width:100%;
+  /* overflow-x: hidden;
+  overflow-y: scroll; */
+}
