--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,78 @@
 // Place all the styles related to the Posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+
+.container {
+  background-image: linear-gradient(45deg,#6993caee, #78d5dbd7, #c5a3c396);
+  overflow-x: hidden;
+  width: 100vw;
+  /* overflow: auto; */
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+  grid-template-rows: 10% auto;
+  grid-template-areas:
+    'header-left . header-right'
+    '. posts .';
+}
+
+.posts {
+  grid-area: posts;
+}
+
+.post {
+  width: 100%;
+  padding: 5px;
+  box-sizing: border-box;
+  // height: 100px;
+  border: 1px solid black;
+  display: grid;
+  grid-template-columns: 20px 1fr 1fr;
+  // grid-template-rows: 15% 15% 60% 10%;
+  grid-template-rows:
+    1.5rem
+    1.5rem
+    auto
+    2rem;
+}
+
+.title {
+  font-size: 20px;
+  grid-column: 1 / 3;
+  grid-row: 1 / 2;
+}
+
+.post-links {
+  grid-column: 3 / 4;
+  grid-row: 1 / 2;
+  justify-self: end;
+}
+
+.age {
+  grid-column: 1 / 3;
+  grid-row: 2 / 3;
+}
+
+.body {
+  grid-column: 2 / 4;
+  grid-row: 3 / 4;
+}
+
+.like-count {
+  grid-column: 1 / 2;
+  grid-row: 4 / 5;
+  align-self: end;
+}
+
+.like {
+  grid-column: 2 / 3;
+  grid-row: 4 / 5;
+  align-self: end;
+}
+
+.author {
+  grid-column: 3 / 4;
+  grid-row: 4 / 5;
+  justify-self: end;
+  align-self: end;
+}
