--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,8 +17,105 @@
  html, body {
   margin:0;
   padding:0;
-  height:100%;
+  /* height:100%; */
   width:100%;
-  /* overflow-x: hidden;
-  overflow-y: scroll; */
+  background-image: linear-gradient(45deg,#e2e6ea, #dfedef, #eff5fc);
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  height: 5vh;
+  background-color: #4267b2;
+  margin-bottom: 4vh;
+  padding: 5px;
+  box-sizing: border-box;
+  align-items: stretch;
+}
+
+.header-item {
+  color: white;
+  background-color: transparent;
+  border: none;
+  height: 100%;
+}
+
+.header-item:hover {
+  text-decoration: none;
+}
+
+#notice {
+  position: fixed;
+  top: 6vh;
+  color: rgb(22, 129, 76);
+  padding: 8px;
+}
+
+.alert {
+  position: fixed;
+  top: 6vh;
+  color: red;
+  padding: 8px;
+}
+
+a {
+  text-decoration: none;
+  color: #385898;
+}
+
+a:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+a:visited {
+  text-decoration: none;
+}
+
+.header-button {
+  background-color: transparent;
+  border: none;
+  height: 100%;
+  margin: 0;
+}
+
+.header-button:hover {
+  background: rgba(0, 0, 0, .1);
+  cursor: pointer;
+}
+
+.header-button:focus {
+  outline: none;
+}
+
+.border-right {
+  border-right: 1px solid rgba(0, 0, 0, 0.171);
+}
+
+.page-body {
+  height: 91vh;
+  padding: 2vh 5vw 0 5vw;
+  box-sizing: border-box;
+}
+
+.important-button {
+  background-color: #4267b27c !important;
+  border-radius: 10px;
+  height: 25px;
+}
+
+.important-button:hover {
+  background-color: #4267b2 !important;
+  color: white;
+}
+
+.cancel {
+  background-color: #ce6fb17c !important;
+  border-radius: 10px;
+  height: 25px;
+}
+
+.cancel:hover {
+  background-color: #471252 !important;
+  color: white;
 }
