--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -2,44 +2,27 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
-
-.container {
-  background-image: linear-gradient(45deg,#6993caee, #78d5dbd7, #c5a3c396);
-  overflow-x: hidden;
-  width: 100vw;
-  /* overflow: auto; */
-  display: grid;
-  grid-template-columns: 1fr 3fr 1fr;
-  grid-template-rows: 10% auto;
-  grid-template-areas:
-    'header-left . header-right'
-    '. posts .';
-}
-
-.posts {
-  grid-area: posts;
-}
+$subtle-border: 1px solid rgba(0, 0, 0, 0.151);
+$blue-text: #4267b2;
 
 .post {
-  width: 100%;
-  padding: 5px;
+  width: 50%;
+  margin: auto;
+  padding: 8px;
   box-sizing: border-box;
-  // height: 100px;
-  border: 1px solid black;
+  border-radius: 6px;
+  background-color: #f9f9f9;
+  box-shadow: 2px 3px 9px 0px #00000085;
   display: grid;
   grid-template-columns: 20px 1fr 1fr;
-  // grid-template-rows: 15% 15% 60% 10%;
-  grid-template-rows:
-    1.5rem
-    1.5rem
-    auto
-    2rem;
+  grid-template-rows: 1.5rem minmax(mincontent, 1.5rem) 1.5rem auto 1.5rem;
 }
 
 .title {
   font-size: 20px;
   grid-column: 1 / 3;
   grid-row: 1 / 2;
+  padding-bottom: 5px;
 }
 
 .post-links {
@@ -48,31 +31,95 @@
   justify-self: end;
 }
 
-.age {
-  grid-column: 1 / 3;
-  grid-row: 2 / 3;
+.history {
+  grid-column: 1 / 4;
+  grid-row: 3 / 4;
+  padding: 5px 0 5px 0;
+  width: 100%;
+  border-bottom: $subtle-border;
 }
 
 .body {
   grid-column: 2 / 4;
-  grid-row: 3 / 4;
+  grid-row: 4 / 5;
+  padding: 8px 0 8px 0;
 }
 
 .like-count {
-  grid-column: 1 / 2;
-  grid-row: 4 / 5;
+  height: 100%;
+  grid-column: 1 / 3;
+  grid-row: 5 / 6;
   align-self: end;
+  border-top: $subtle-border;
+  color: $blue-text;
+  padding-top: 8px;
+  box-sizing: border-box;
 }
 
 .like {
-  grid-column: 2 / 3;
-  grid-row: 4 / 5;
+  height: 100%;
+  text-align: end;
+  grid-column: 3 / 4;
+  grid-row: 5 / 6;
   align-self: end;
+  border-top: $subtle-border;
+  padding: 8px;
+  box-sizing: border-box;
 }
 
 .author {
+  height: 100%;
+  grid-column: 1 / 3;
+  grid-row: 2 / 3;
+  // justify-self: end;
+  // text-align: end;
+  // align-self: end;
+  // border-bottom: $subtle-border;
+  // padding: 8px;
+  box-sizing: border-box;
+  color: $blue-text;
+  font-style: italic;
+  font-weight: bold;
+}
+
+.like-border {
+  height: 100%;
   grid-column: 3 / 4;
-  grid-row: 4 / 5;
-  justify-self: end;
-  align-self: end;
+  grid-row: 5 / 6;
+  border-top: $subtle-border;
+  // padding: 8px;
+  box-sizing: border-box;
+}
+
+input[type="submit" i] {
+  border: none;
+  background-color: transparent;
+}
+
+input[type="submit" i]:hover {
+  background: rgba(0, 0, 0, .1);
+  cursor: pointer;
+}
+
+.fa-thumbs-up {
+  display: inline !important;
+  margin-right: 4px;
+  border-radius: 100%;
+  background-color: blue;
+  padding: 4px;
+  color: white;
+}
+
+.like-link {
+  color: $blue-text;
+  padding: 0;
+}
+
+.like-link:hover {
+  background-color: transparent !important;
+  text-decoration: underline;
+}
+
+.like-link:focus {
+  outline: none;
 }
