--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -71,11 +71,6 @@ $blue-text: #4267b2;
   height: 100%;
   grid-column: 1 / 3;
   grid-row: 2 / 3;
-  // justify-self: end;
-  // text-align: end;
-  // align-self: end;
-  // border-bottom: $subtle-border;
-  // padding: 8px;
   box-sizing: border-box;
   color: $blue-text;
   font-style: italic;
@@ -87,7 +82,6 @@ $blue-text: #4267b2;
   grid-column: 3 / 4;
   grid-row: 5 / 6;
   border-top: $subtle-border;
-  // padding: 8px;
   box-sizing: border-box;
 }
 
@@ -105,7 +99,7 @@ input[type="submit" i]:hover {
   display: inline !important;
   margin-right: 4px;
   border-radius: 100%;
-  background-color: blue;
+  background-color: $blue-text;
   padding: 4px;
   color: white;
 }
