--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,10 +17,11 @@
  html, body {
   margin:0;
   padding:0;
-  /* height:100%; */
   width:100%;
   background-image: linear-gradient(45deg,#e2e6ea, #dfedef, #eff5fc);
 }
+
+/* header */
 
 header {
   display: flex;
@@ -30,19 +31,36 @@ header {
   margin-bottom: 4vh;
   padding: 5px;
   box-sizing: border-box;
-  align-items: stretch;
 }
 
-.header-item {
-  color: white;
+.header-button {
   background-color: transparent;
   border: none;
   height: 100%;
 }
 
+.header-button:hover {
+  background: rgba(0, 0, 0, .1);
+  cursor: pointer;
+}
+
+.header-button:focus {
+  outline: none;
+}
+
+.header-item {
+  color: white;
+}
+
 .header-item:hover {
   text-decoration: none;
 }
+
+.border-right {
+  border-right: 1px solid rgba(0, 0, 0, 0.171);
+}
+
+/* flash */
 
 #notice {
   position: fixed;
@@ -58,6 +76,8 @@ header {
   padding: 8px;
 }
 
+/* links */
+
 a {
   text-decoration: none;
   color: #385898;
@@ -72,31 +92,15 @@ a:visited {
   text-decoration: none;
 }
 
-.header-button {
-  background-color: transparent;
-  border: none;
-  height: 100%;
-  margin: 0;
-}
-
-.header-button:hover {
-  background: rgba(0, 0, 0, .1);
-  cursor: pointer;
-}
-
-.header-button:focus {
-  outline: none;
-}
-
-.border-right {
-  border-right: 1px solid rgba(0, 0, 0, 0.171);
-}
+/* container for pages other than root */
 
 .page-body {
   height: 91vh;
   padding: 2vh 5vw 0 5vw;
   box-sizing: border-box;
 }
+
+/* submit, create, edit, cancel, etc. */
 
 .important-button {
   background-color: #4267b27c !important;
