--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -14,8 +14,8 @@ $blue-text: #4267b2;
   background-color: #f9f9f9;
   box-shadow: 2px 3px 9px 0px #00000085;
   display: grid;
-  grid-template-columns: 20px 1fr 1fr;
-  grid-template-rows: 1.5rem minmax(mincontent, 1.5rem) 1.5rem auto 1.5rem;
+  grid-template-columns: 20px 3fr 1fr;
+  grid-template-rows: auto;
 }
 
 .title {
@@ -35,7 +35,6 @@ $blue-text: #4267b2;
   grid-column: 1 / 4;
   grid-row: 3 / 4;
   padding: 5px 0 5px 0;
-  width: 100%;
   border-bottom: $subtle-border;
 }
 
@@ -43,28 +42,6 @@ $blue-text: #4267b2;
   grid-column: 2 / 4;
   grid-row: 4 / 5;
   padding: 8px 0 8px 0;
-}
-
-.like-count {
-  height: 100%;
-  grid-column: 1 / 3;
-  grid-row: 5 / 6;
-  align-self: end;
-  border-top: $subtle-border;
-  color: $blue-text;
-  padding-top: 8px;
-  box-sizing: border-box;
-}
-
-.like {
-  height: 100%;
-  text-align: end;
-  grid-column: 3 / 4;
-  grid-row: 5 / 6;
-  align-self: end;
-  border-top: $subtle-border;
-  padding: 8px;
-  box-sizing: border-box;
 }
 
 .author {
@@ -77,22 +54,23 @@ $blue-text: #4267b2;
   font-weight: bold;
 }
 
-.like-border {
+.like-count {
   height: 100%;
-  grid-column: 3 / 4;
+  grid-column: 1 / 3;
   grid-row: 5 / 6;
   border-top: $subtle-border;
+  color: $blue-text;
+  padding-top: 8px;
   box-sizing: border-box;
 }
 
-input[type="submit" i] {
-  border: none;
-  background-color: transparent;
-}
-
-input[type="submit" i]:hover {
-  background: rgba(0, 0, 0, .1);
-  cursor: pointer;
+.like {
+  text-align: end;
+  grid-column: 3 / 4;
+  grid-row: 5 / 6;
+  border-top: $subtle-border;
+  padding-top: 8px;
+  box-sizing: border-box;
 }
 
 .fa-thumbs-up {
@@ -104,16 +82,36 @@ input[type="submit" i]:hover {
   color: white;
 }
 
+// like/unlike button/link
+
+input[type="submit" i] {
+  border: none;
+  background-color: transparent;
+}
+
+input[type="submit" i]:hover {
+  cursor: pointer;
+}
+
 .like-link {
   color: $blue-text;
   padding: 0;
 }
 
 .like-link:hover {
-  background-color: transparent !important;
   text-decoration: underline;
 }
 
 .like-link:focus {
   outline: none;
+}
+
+// border below body and above like count / like button
+
+.like-border {
+  height: 100%;
+  grid-column: 3 / 4;
+  grid-row: 5 / 6;
+  border-top: $subtle-border;
+  box-sizing: border-box;
 }
