--- a/app/views/shared/about.html.erb
+++ b/app/views/shared/about.html.erb
@@ -3,4 +3,5 @@
     link_to 'curriculum', 'https://www.theodinproject.com/courses/ruby-on-rails/lessons/authentication'
     %>. View on <%=
     link_to 'Github', 'https://github.com/andrewjh271/members_only' %>.</p>
+  <p>For full functionality sign up or login with <i>odin@example.com</i> and <i>password</i>.</p>
 </div>
