--- a/app/views/posts/index0.html.erb
+++ b/app/views/posts/index0.html.erb
@@ -36,7 +36,7 @@
           <td><%= post.author.username %></td>
         <% end %>
         <td><%= link_to 'Show', post %></td>
-        <% if current_user.try(:id) == post.author_id %>
+        <% if current_user == post.author %>
           <td><%= link_to 'Edit', edit_post_path(post) %></td>
           <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <% end %>
