--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -37,7 +37,7 @@
 
   <br>
   <%= link_to 'Back', posts_path %>
-  <% if current_user.try(:id) == @post.author_id %>
+  <% if current_user == @post.author %>
     <%= link_to 'Edit', edit_post_path(@post) %>
     <%= link_to 'Delete', @post, method: :delete, data: { confirm: 'Are you sure?' } %>
   <% end %>
